--- a/src/main/resources/shishuocms.properties
+++ b/src/main/resources/shishuocms.properties
@@ -6,7 +6,7 @@ shishuocms.storage=ace
 jdbc.driverClass=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/shishuocms?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 jdbc.username=root
-jdbc.password=root
+jdbc.password=
 jdbc.initialPoolSize=2
 jdbc.minPoolSize=2
 jdbc.maxPoolSize=5
